# ard

./: .gitignore  .gitmodules  ARD_PROVIDER_DESIGN.md  Makefile  README.md  ansible.cfg  bindep.txt  bootstrap-repo.sh  bug-report.md  developer-guide.md  pyproject.toml
ansible/: README.md  deploy_k3d.yaml  deploy_microshift.yaml  deploy_multinode_devstack.yaml  deploy_oks.yaml  deploy_shift_stack.yaml  devstack_common.yaml  devstack_compute.yaml  devstack_controller.yaml  vdpa.yaml
ansible/playbooks/: ard-apply.yaml  ard-cleanup.yaml  ard-deploy-devstack.yaml  ard-destroy.yaml  ard-molecule-create.yaml  ard-render.yaml  ard-verify.yaml
ansible/roles/: README.md  deploy_install_yamls
docs/: README.md  repo-navigation.md
docs/architecture/: ARD_PROVIDER_DESIGN.md  network-overlays.md  render-contracts.md
docs/concepts/: ard-render-model.md
docs/drafts/: ARD_OCI_DESIGN.md  MICROSHIFT_DEPLOYMENT_PLAN.md
docs/providers/: kubevirt-prerequisites.md  static.md
docs/workloads/: kubevirt-oko-networking.md
examples/: README.md
examples/devstack/: README.md
examples/microshift/: README.md
examples/oko/: README.md
examples/provider-test/: README.md
examples/vdpa/: ansible.cfg  ansible_inventory.yml  global.yaml
molecule/centos-10-one-controller-two-compute/: INSTALL.rst  cleanup.yml  converge.yml  molecule.yml
molecule/default/: INSTALL.rst  converge.yml  create.yml  molecule.yml
molecule/k3d/: collections.yml  converge.yml  molecule.yml  prepare.yml  requirements.yml
molecule/kubevirt-microshift/: verify.yml  (+2 more)
okd/: vagrant.ign
scripts/: ard-ssh
(+386 files in other folders)
