[project]
name = "ard"
version = "0.1.0"
description = "Ansible Role DevStack local provider tooling"
requires-python = ">=3.13"
dependencies = [
    "ansible-core==2.18.7",
    "passlib==1.7.4",
    "netaddr==1.3.0",
    "molecule>=25.0.0",
    "molecule-plugins[podman]>=23.7.0",
]

[tool.uv]
package = false
